  objects similar in operation to the WeeWX accumulators
- implemented a field_map config item allowing certain JSON output field
  properties to be controlled by the user
- fields beaufort and currentSolarMax is no longer directly calculated by rtgd
  but are now populated from WeeWX fields beaufort and maxSolarRad respectively
- field lastRainTipISO is now populated
v0.4.2
- fix error in some expressions that include > and < where operands could be
  None
v0.4.1
- fix max() error under python3
- implemented kludgy work around for lack of response message when using HTTP
  POST under python 3
v0.4.0
*   updated to work under WeeWX v4.0 using either python 2 or 3
v0.3.7
*   revised WU API response parsing to eliminate occasional errors where no
    forecast text was found
v0.3.6
*   added support for new weather.com based WU API
*   removed support for old api.wunderground.com based WU API
*   updated to gauge-data.txt version 14 through addition of inTemp max/min and
    times fields (intempTH, intempTL, TintempTH and TintempTL)
*   minor reformatting of some RealtimeGaugeDataThread __init__ logging
*   reformatted up front comments in rtgd.py
*   changed the install instructions to restart rather than stopping then
    starting the WeeWX service
v0.3.5
*   added support for Darksky forecast API
*   added support for Zambretti forecast text (subject to weeWX forecasting
    extension being installed)
*   refactored code for obtaining scroller text
*   each scroller text source now uses its own 2nd level (ie [[ ]]) config with
    the scroller source specified under [RealtimeGaugeData]
v0.3.4 (not released)
*   added support for optional fields mrfall and yrfall
v0.3.3
*   implemented atomic write when writing gauge-data.txt to file
v0.3.2
*   modified rtdgthread queue management to fix 100% CPU usage issue
v0.3.1
*   added ignore_lost_contact config option to ignore the sensor contact
    check result